--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,11 +16,11 @@ jobs:
     - name: Set up Python 3.9
       uses: actions/setup-python@v4
       with:
-        python-version: "3.9.13"
+        python-version: "3.12.2"
     - name: Install tools
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements-dev.txt
+        pip install -r requirements.txt
     - name: Lint with black
       run: |
         python -m black --check --diff .
@@ -33,8 +33,8 @@ jobs:
     needs: linting # only run the code testing if linting passed
     strategy:
       matrix:
-        python-version: ["3.9.13", "3.10.11"]
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        python-version: ["3.12.2"]
+        os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v3
@@ -45,10 +45,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements-dev.txt
+        pip install -r requirements.txt
     - name: Test with pytest
       run: |
         python -m pytest
-
-
-  
