--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,13 @@
-pytest
-flake8
-black
-numpy
+pytest==8.1.1
+flake8==7.0.0
+black==24.3.0
+isort==5.13.2
+
+numpy==1.26.4
+scipy==1.12.0
+SimpleITK==2.3.1
+matplotlib==3.8.3
+
+ipywidgets==8.1.2
+numba==0.59.0
+jupyter==1.0.0
