feat: Added utils - Updated read_image to return correct color orderings and floats - Added rgb_to_gray function - Added print_image function that automatically downsizes image

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,2 +1,10 @@
 [tool.flake8]
 max-line-length = 88
+
+[tool.pylint]
+# Pylint configs
+
+[tool.pylint.messages_control]
+disable = [
+    "E1101",
+]
