Color space exploration

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,10 @@
         "cmap",
         "colorbar",
         "Downsample",
-        "imshow"
+        "figsize",
+        "imshow",
+        "sitk",
+        "skimage"
     ],
 
 }
