--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -90,8 +90,10 @@ repos:
     hooks:
       - id: black
         language_version: python3.11
+        args: [--line-length=90]
 
   - repo: git@github.com:PyCQA/flake8
     rev: 6.1.0
     hooks:
       - id: flake8
+        args: [--max-line-length=90]
